fixing 3 up on services page to drop on mobile

--- a/site/themes/redwood/css/redwood.css
+++ b/site/themes/redwood/css/redwood.css
@@ -103,6 +103,9 @@ body {
     background-color: #77A1D3;
     border-radius: 32px;
 }
+.secondone {
+    border-radius: 32px;
+}
 .firstone h3, .secondone h3, .secondone h4 {
     color: #000000;
 }
@@ -157,10 +160,15 @@ body {
 .how-section1, .how-section2, .how-section3, .how-sectiion4 {
     text-align: center;
 }
-.how-section1 .row h2, .how-section3 .row h2, .how-section4 .row h2, .how-section6 .row h2, .how-section3 .row h3 {
+.how-section1 .row h2, .how-section3 .row h2, .how-section4 .row h2, .how-section6 .row h2 {
     color: #000000;
     font-weight: bold;
     font-size: 40px;
+    margin-bottom: 2%;
+}
+.how-section3 .row h3 {
+    color: #000000;
+    font-weight: bold;
     margin-bottom: 2%;
 }
 .how-section2 .row p, .how-section6 .row p {
@@ -975,5 +983,5 @@ img.zoom-img {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 4%;
-    /*padding-left: 30px;*/
+    padding-bottom: 15px;
 }
